Fix overflowing contact form

--- a/app/assets/stylesheets/general/_form.sass
+++ b/app/assets/stylesheets/general/_form.sass
@@ -314,6 +314,10 @@ textarea
     &:-ms-input-placeholder
       color: transparent
 
+// Specific forms
+#mc_embed_signup
+  max-width: 100%
+
 // Errors
 
 .field_with_errors
