--- a/app/assets/stylesheets/general/_tables.sass
+++ b/app/assets/stylesheets/general/_tables.sass
@@ -1,3 +1,6 @@
+table
+  max-width: 100%
+
 .table-buttons-flex
   display: flex
 
